changed .location to .geometry

--- a/Example 20 - Objects example.ipynb
+++ b/Example 20 - Objects example.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -229,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -253,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -280,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -315,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -439,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -448,7 +448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -458,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -470,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -483,7 +483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -500,41 +500,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "T=000.00 Condition: to_site_1.container.level<5000 is satisfied\n",
-      "T=000.00 block placement to site_1 started\n",
-      "T=000.00 block placement to site_2 suspended\n",
-      "T=200.00 barge_1 container value: 1000\n",
-      "T=1400.00 site_1 container value: 1000\n",
-      "T=2266.67 barge_1 container value: 1000\n",
-      "T=3466.67 site_1 container value: 2000\n",
-      "T=4333.33 barge_1 container value: 1000\n",
-      "T=5334.00 Condition: to_site_2.container.level<5000 and to_site_1.container.level>=3000 is satisfied\n",
-      "T=5334.00 block placement to site_2 started\n",
-      "T=5533.33 site_1 container value: 3000\n",
-      "T=5534.00 barge_2 container value: 1000\n",
-      "T=6400.00 barge_1 container value: 1000\n",
-      "T=6734.00 site_2 container value: 1000\n",
-      "T=7600.00 site_1 container value: 4000\n",
-      "T=7600.67 barge_2 container value: 1000\n",
-      "T=8466.67 barge_1 container value: 1000\n",
-      "T=8800.67 site_2 container value: 2000\n",
-      "T=9666.67 site_1 container value: 5000\n",
-      "T=9667.33 barge_2 container value: 1000\n",
-      "T=10867.33 site_2 container value: 3000\n",
-      "T=11734.00 barge_2 container value: 1000\n",
-      "T=12934.00 site_2 container value: 4000\n",
-      "T=13800.67 barge_2 container value: 1000\n",
-      "T=15000.67 site_2 container value: 5000\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#*** Run the project\n",
     "project.run()"
@@ -551,7 +519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -598,29 +566,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "we start with data {'name': 'project', 'geometry': {\"coordinates\": [52, 3], \"type\": \"Point\"}}\n",
-      "now we load data into the Site\n",
-      "Location: {\"coordinates\": [52, 3], \"type\": \"Point\"}\n",
-      "Name: project\n",
-      "Site: {'geometry': {\"coordinates\": [52, 3], \"type\": \"Point\"}, 'name': 'project', 'id': '90ea5552-881f-11e8-a892-8c859054da5d'}\n",
-      "now we create a DynamicSite, a custom type that you might want to create in a ui\n",
-      "we load data into the dynamic site\n",
-      "Name: project\n",
-      "Location: {\"coordinates\": [52, 3], \"type\": \"Point\"}\n",
-      "Name: Den Oever\n",
-      "Location: {\"coordinates\": [52.5, 4], \"type\": \"Point\"}\n",
-      "Transport\n",
-      "Setting sail from {\"coordinates\": [52, 3], \"type\": \"Point\"} to {\"coordinates\": [52.5, 4], \"type\": \"Point\"}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
     "\n",
@@ -666,8 +614,8 @@
     "import datetime\n",
     "import dateutil\n",
     "\n",
-    "shape_1 = shapely.geometry.asShape(dynamic_site_1.location)\n",
-    "shape_2 = shapely.geometry.asShape(dynamic_site_2.location)\n",
+    "shape_1 = shapely.geometry.asShape(dynamic_site_1.geometry)\n",
+    "shape_2 = shapely.geometry.asShape(dynamic_site_2.geometry)\n",
     "shape_1.distance(shape_2)\n",
     "\n",
     "\n",
@@ -737,13 +685,6 @@
     "import json\n",
     "transport_resource_1.__dict__"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -762,7 +703,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
