Suggestions by Fedor now work more or less. Not tested yet.

--- a/Example 20 - Objects example.ipynb
+++ b/Example 20 - Objects example.ipynb
@@ -85,10 +85,11 @@
     "    container: a simpy object that can hold stuff\n",
     "    total_reguested: a counter needed to prevent over-handling\"\"\"\n",
     "\n",
-    "    def __init__(self, capacity, level, *args, **kwargs):\n",
+    "    def __init__(self, capacity, level=0, *args, **kwargs):\n",
     "        super().__init__(*args, **kwargs)\n",
     "        \"\"\"Initialization\"\"\"\n",
-    "        self.container = simpy.Container(capacity, init=level)\n",
+    "#         print(self.__dict__)\n",
+    "        self.container = simpy.Container(env, capacity, init=level)\n",
     "        self.total_requested = 0\n"
    ]
   },
@@ -107,8 +108,9 @@
     "    v_full: speed full [m/s]\"\"\"\n",
     "    \n",
     "    def __init__(self, \n",
-    "                 origin=None, destination=None,\n",
+    "                 origin, destination,\n",
     "                 v_empty=1.5, v_full=1, \n",
+    "                 nr_resources=1,\n",
     "                 *args, **kwargs):\n",
     "        super().__init__(*args, **kwargs)\n",
     "        \"\"\"Initialization\"\"\"\n",
@@ -116,12 +118,13 @@
     "        self.destination = destination\n",
     "        self.v_empty = v_empty \n",
     "        self.v_full = v_full \n",
+    "        self.resource = simpy.Resource(env, capacity=nr_resources)\n",
     "\n",
-    "    def execute(self):\n",
-    "        print(\"Setting sail from %s to %s\" % (self.origin.geometry, self.destination.geometry))\n",
+    "    def execute_move(self, origin, destination):\n",
+    "        #print(\"Setting sail from %s to %s\" % (origin.geometry, destination.geometry))\n",
     "\n",
     "        origin = shapely.geometry.asShape(self.origin.geometry)\n",
-    "        destination = shapely.geometry.asShape(self.destinaton.geometry)\n",
+    "        destination = shapely.geometry.asShape(self.destination.geometry)\n",
     "        distance = origin.distance(destination) \n",
     "\n",
     "        if self.container.level == self.container.capacity:\n",
@@ -133,7 +136,8 @@
     "            self.log_entry('transport empty start', self.env.now, self.container.level)\n",
     "            yield self.env.timeout(distance / self.v_empty)\n",
     "            self.log_entry('transport empty stop', self.env.now, self.container.level)\n",
-    "                "
+    "         \n",
+    "        print(distance)"
    ]
   },
   {
@@ -151,19 +155,22 @@
     "    \"\"\"\n",
     "\n",
     "    def __init__(self, \n",
-    "                 origin, destination, rate, amount=0, \n",
+    "                 nr_resources,\n",
+    "                 origin, destination, rate, amount=0,\n",
     "                 *args, **kwargs):\n",
     "        super().__init__(*args, **kwargs)\n",
     "        \"\"\"Initialization\"\"\"\n",
+    "        self.resource = simpy.Resource(env, capacity=nr_resources)\n",
     "        self.origin=origin\n",
     "        self.destination=destination\n",
     "        self.rate=rate\n",
     "        self.amount=amount\n",
     "        \n",
-    "    def execute(self):\n",
-    "        self.log_entry('process start', self.env.now, self.container.level)\n",
-    "        yield self.env.timeout(distance / self.v_empty)\n",
-    "        self.log_entry('process stop', self.env.now, self.container.level)\n",
+    "    def execute_process(self, origin, destination, amount):\n",
+    "\n",
+    "        origin.container.get(amount)\n",
+    "        destination.container.put(amount)\n",
+    "        yield self.env.timeout(amount / self.rate)\n",
     "        "
    ]
   },
@@ -331,10 +338,9 @@
     "                                   loader, mover, unloader):\n",
     "        \"\"\"Installation process\"\"\"\n",
     "        amount = min(\n",
-    "            origin.container.level,\n",
     "            mover.container.capacity - mover.container.level,\n",
     "            destination.container.capacity - destination.container.level)\n",
-    "        print(amount)\n",
+    "\n",
     "        if amount>0:\n",
     "            # request access to the load_resource\n",
     "            with loader.resource.request() as my_load_resource_turn:\n",
@@ -343,7 +349,9 @@
     "                destination.total_requested += amount\n",
     "                origin.total_requested += amount\n",
     "\n",
-    "                yield from loader.Process.execute(origin, mover, amount)\n",
+    "                mover.log_entry('loading start', self.env.now, mover.container.level)\n",
+    "                yield from loader.execute_process(origin, mover, amount)\n",
+    "                mover.log_entry('loading stop', self.env.now, mover.container.level)\n",
     "\n",
     "                loader.resource.release(my_load_resource_turn)\n",
     "\n",
@@ -351,13 +359,15 @@
     "            with mover.resource.request() as my_mover_turn:\n",
     "                yield my_mover_turn\n",
     "\n",
-    "                yield from mover.Move.execute()\n",
+    "                yield from mover.execute_move(origin, destination)\n",
     "\n",
     "            # request access to the placement_resource\n",
     "            with unloader.resource.request() as my_unloader_turn:\n",
     "                yield my_unloader_turn\n",
     "\n",
-    "                yield from loader.load(mover, destination, amount)\n",
+    "                mover.log_entry('unloading start', self.env.now, mover.container.level)\n",
+    "                yield from loader.execute_process(mover, destination, amount)\n",
+    "                mover.log_entry('unloading stop', self.env.now, mover.container.level)\n",
     "\n",
     "                unloader.resource.release(my_unloader_turn)\n",
     "\n",
@@ -365,7 +375,7 @@
     "            with mover.resource.request() as my_mover_turn:\n",
     "                yield my_mover_turn\n",
     "\n",
-    "                yield from mover.Move.execute()\n",
+    "                yield from mover.execute_move(destination, origin)\n",
     "\n",
     "                mover.resource.release(my_mover_turn)\n"
    ]
@@ -423,7 +433,7 @@
     "# sites in database (nr indicates km's from Den Oever haven)\n",
     "data_site_00 = {\"env\": env,\n",
     "                \"name\": \"KP00\", \"geometry\": geojson.Point([52.94239823421129, 5.019298185633251]),\n",
-    "                \"capacity\": 15000, \"level\": 0}\n",
+    "                \"capacity\": 1500, \"level\": 0}\n",
     "data_site_01 = {\"env\": env,\n",
     "                \"name\": \"KP01\", \"geometry\": geojson.Point([52.93917167503315, 5.070195628786471]),\n",
     "                \"capacity\": 5000, \"level\": 0}\n",
@@ -459,18 +469,18 @@
     "# - processing resources\n",
     "data_gantry_crane = {\"env\": env,\n",
     "                \"name\": \"Gantry crane\", \"geometry\": geojson.Point([52.94239823421129, 5.019298185633251]),\n",
-    "                \"origin\": site_00, \"destination\": site_01, \"rate\": 0.10}\n",
+    "                \"origin\": site_00, \"destination\": site_01, \"rate\": 0.10, \"nr_resources\": 1}\n",
     "data_installation_crane = {\"env\": env,\n",
     "                \"name\": \"Installation crane\", \"geometry\": geojson.Point([53.0229621352376,  5.197016484858931]),\n",
-    "                \"origin\": site_00, \"destination\": site_01, \"rate\": 0.05}\n",
+    "                \"origin\": site_00, \"destination\": site_01, \"rate\": 0.05, \"nr_resources\": 1}\n",
     "\n",
     "# - transport resources\n",
     "data_transport_barge_01 = {\"env\": env,\n",
     "                \"name\": \"Transport barge 01\", \"geometry\": geojson.Point([52.93917167503315, 5.070195628786471]),\n",
-    "                \"capacity\": 1000, \"level\": 0}\n",
+    "                \"capacity\": 1000, \"level\": 0, \"nr_resources\": 1, \"origin\": site_00, \"destination\": site_01}\n",
     "data_transport_barge_02 = {\"env\": env,\n",
     "                \"name\": \"Transport barge 02\", \"geometry\": geojson.Point([52.93917167503315, 5.070195628786471]),\n",
-    "                \"capacity\": 1000, \"level\": 0}\n",
+    "                \"capacity\": 1000, \"level\": 0, \"nr_resources\": 1, \"origin\": site_00, \"destination\": site_01}\n",
     "\n",
     "# create site objects\n",
     "# - processing resources\n",
@@ -525,184 +535,6 @@
    "source": [
     "#*** Run the project\n",
     "env.run()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Mixins\n",
-    "\n",
-    "We can implement the different aspects of our components as mixins. Make sure the different aspects are not dependent on each other. "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# example of how to initialize different mixins\n",
-    "# The mixin pattern is a way to dynamically compose a type, based on so called mixins\n",
-    "import json\n",
-    "import geojson\n",
-    "import uuid\n",
-    "\n",
-    "class Identifiable(object):\n",
-    "    \"\"\"Something that has a name and id\"\"\"\n",
-    "    def __init__(self, name, id=None, *args, **kwargs):\n",
-    "        super().__init__(*args, **kwargs)\n",
-    "        self.name = name\n",
-    "        # generate some id, in this case based on m\n",
-    "        self.id = id if id else str(uuid.uuid1())\n",
-    "        print(\"Name:\", self.name)\n",
-    "\n",
-    "class Location(object):\n",
-    "    \"\"\"Something with a geometry (geojson format)\"\"\"\n",
-    "    def __init__(self, geometry, *args, **kwargs):\n",
-    "        super().__init__(*args, **kwargs)\n",
-    "        self.geometry = geometry\n",
-    "        print(\"Location:\", self.geometry)\n",
-    "\n",
-    "class Transport(object):\n",
-    "    \"\"\"Something that can move\"\"\"\n",
-    "    def __init__(self, env, from_location, to_location, speed, *args, **kwargs):\n",
-    "        super().__init__(*args, **kwargs)\n",
-    "        self.env = env\n",
-    "        self.speed = speed\n",
-    "        self.from_location = from_location\n",
-    "        self.to_location = to_location\n",
-    "        self.location = from_location\n",
-    "        print(\"Transport\")\n",
-    "    def move(self):\n",
-    "        print(\"Setting sail from %s to %s\" % (self.from_location.geometry, self.to_location.geometry))\n",
-    "        self.location = self.to_location\n",
-    "        to = shapely.geometry.asShape(self.to_location.geometry)\n",
-    "        from_ = shapely.geometry.asShape(self.from_location.geometry)\n",
-    "        distance = from_.distance(to) \n",
-    "        yield self.env.timeout(distance / self.speed)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "\n",
-    "class Site(Identifiable, Location):\n",
-    "    def __init__(self, *args, **kwargs):\n",
-    "        super().__init__(*args, **kwargs)\n",
-    "        print(\"Site:\", self.__dict__)\n",
-    "    \n",
-    "\n",
-    "# data in database\n",
-    "data = {\"name\": \"project\", \"geometry\": geojson.Point([52, 3])}\n",
-    "data2 = {\"name\": \"Den Oever\", \"geometry\": geojson.Point([52.5, 4])}\n",
-    "print(\"we start with data\", data)\n",
-    "        \n",
-    "# now you have a class with all the variables stored in the instance\n",
-    "print(\"now we load data into the Site\")\n",
-    "site = Site(**data)\n",
-    "\n",
-    "# Create a DynamicSite type in runtime based on the building blocks Location and Identifiable\n",
-    "print(\"now we create a DynamicSite, a custom type that you might want to create in a ui\")\n",
-    "DynamicSite = type(\"DynamicSite\", (Location, Identifiable), {})\n",
-    "\n",
-    "env = simpy.Environment()\n",
-    "\n",
-    "# now we can load data into it\n",
-    "print(\"we load data into the dynamic site\")\n",
-    "dynamic_site_1 = DynamicSite(**data)\n",
-    "dynamic_site_2 = DynamicSite(**data2)\n",
-    "transport = Transport(env, from_location=dynamic_site_1, to_location=dynamic_site_2, speed=0.3)\n",
-    "env.process(transport.move())\n",
-    "# now we can serialize it\n",
-    "json.dumps(site.__dict__), json.dumps(dynamic_site_1.__dict__)\n",
-    "env.run()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import shapely.geometry\n",
-    "import datetime\n",
-    "import dateutil\n",
-    "\n",
-    "shape_1 = shapely.geometry.asShape(dynamic_site_1.geometry)\n",
-    "shape_2 = shapely.geometry.asShape(dynamic_site_2.geometry)\n",
-    "shape_1.distance(shape_2)\n",
-    "\n",
-    "\n",
-    "now = datetime.datetime.now()\n",
-    "\n",
-    "now.timestamp() - datetime.datetime(1970, 1, 1, tzinfo=dateutil.tz.UTC).timestamp()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import json\n",
-    "\n",
-    "class EncodeNetwork(json.JSONEncoder):\n",
-    "    def default(self, *args, **kwargs):\n",
-    "        return super()\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Test space"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import networkx as nx"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "G = nx.Graph()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "FG = nx.Graph()\n",
-    "FG.add_weighted_edges_from([(1, 2, 0.125), (1, 3, 0.75), (2, 4, 1.2), (3, 4, 0.375)])\n",
-    "for n, nbrs in FG.adj.items():\n",
-    "    for nbr, eattr in nbrs.items():\n",
-    "        wt = eattr['weight']\n",
-    "        if wt < 0.5: print('(%d, %d, %.3f)' % (n, nbr, wt))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import json\n",
-    "transport_resource_1.__dict__"
    ]
   }
  ],
