Checked some issues and corrected some minor issues. It seems to work roughly the same as in the previous setup, but now according to the coding suggestions by Fedor.

--- a/Example 20 - Objects example.ipynb
+++ b/Example 20 - Objects example.ipynb
@@ -130,14 +130,14 @@
     "        if self.container.level == self.container.capacity:\n",
     "            self.log_entry('transport full start', self.env.now, self.container.level)\n",
     "            yield self.env.timeout(distance / self.v_full)\n",
+    "            print('  sailing full: ' + str(self.v_full) + ' m/s')\n",
     "            self.log_entry('transport full stop', self.env.now, self.container.level)\n",
     "\n",
     "        elif self.container.level == 0:\n",
     "            self.log_entry('transport empty start', self.env.now, self.container.level)\n",
     "            yield self.env.timeout(distance / self.v_empty)\n",
-    "            self.log_entry('transport empty stop', self.env.now, self.container.level)\n",
-    "         \n",
-    "        print(distance)"
+    "            print('  sailing empty: ' + str(self.v_empty) + ' m/s')\n",
+    "            self.log_entry('transport empty stop', self.env.now, self.container.level)\n"
    ]
   },
   {
@@ -167,10 +167,18 @@
     "        self.amount=amount\n",
     "        \n",
     "    def execute_process(self, origin, destination, amount):\n",
-    "\n",
+    " #       print(origin.name)\n",
+    " #       print(origin.container.level)\n",
     "        origin.container.get(amount)\n",
+    " #       print(origin.container.level)\n",
+    "        \n",
+    " #       print(destination.name)\n",
+    " #       print(destination.container.level)\n",
     "        destination.container.put(amount)\n",
+    " #       print(destination.container.level)\n",
+    "\n",
     "        yield self.env.timeout(amount / self.rate)\n",
+    " #       print('T=' + '{:06.2f}'.format(self.env.now) + ' ' + destination.name + ' container value: ' + str(destination.container.level))\n",
     "        "
    ]
   },
@@ -350,6 +358,7 @@
     "                origin.total_requested += amount\n",
     "\n",
     "                mover.log_entry('loading start', self.env.now, mover.container.level)\n",
+    "                print('Loading:')\n",
     "                yield from loader.execute_process(origin, mover, amount)\n",
     "                mover.log_entry('loading stop', self.env.now, mover.container.level)\n",
     "\n",
@@ -366,6 +375,7 @@
     "                yield my_unloader_turn\n",
     "\n",
     "                mover.log_entry('unloading start', self.env.now, mover.container.level)\n",
+    "                print('Unloading:')\n",
     "                yield from loader.execute_process(mover, destination, amount)\n",
     "                mover.log_entry('unloading stop', self.env.now, mover.container.level)\n",
     "\n",
@@ -433,7 +443,7 @@
     "# sites in database (nr indicates km's from Den Oever haven)\n",
     "data_site_00 = {\"env\": env,\n",
     "                \"name\": \"KP00\", \"geometry\": geojson.Point([52.94239823421129, 5.019298185633251]),\n",
-    "                \"capacity\": 1500, \"level\": 0}\n",
+    "                \"capacity\": 15000, \"level\": 15000}\n",
     "data_site_01 = {\"env\": env,\n",
     "                \"name\": \"KP01\", \"geometry\": geojson.Point([52.93917167503315, 5.070195628786471]),\n",
     "                \"capacity\": 5000, \"level\": 0}\n",
