--- a/Example 20 - Objects example.ipynb
+++ b/Example 20 - Objects example.ipynb
@@ -83,7 +83,7 @@
     "    capacity: amount the container can hold\n",
     "    level: amount the container holds\n",
     "    container: a simpy object that can hold stuff\n",
-    "    total_reguested: a counter needed to prevent over-handling\"\"\"\n",
+    "    total_requested: a counter needed to prevent over-handling\"\"\"\n",
     "\n",
     "    def __init__(self, capacity, level=0, *args, **kwargs):\n",
     "        super().__init__(*args, **kwargs)\n",
