Cleaned up code, included some documentation

--- a/Example 20 - Objects example.ipynb
+++ b/Example 20 - Objects example.ipynb
@@ -88,7 +88,6 @@
     "    def __init__(self, capacity, level=0, *args, **kwargs):\n",
     "        super().__init__(*args, **kwargs)\n",
     "        \"\"\"Initialization\"\"\"\n",
-    "#         print(self.__dict__)\n",
     "        self.container = simpy.Container(env, capacity, init=level)\n",
     "        self.total_requested = 0\n"
    ]
@@ -105,7 +104,8 @@
     "    origin: origin of trip\n",
     "    destination: destination of trip\n",
     "    v_empty: speed empty [m/s]\n",
-    "    v_full: speed full [m/s]\"\"\"\n",
+    "    v_full: speed full [m/s]\n",
+    "    resource: a simpy resource that can be requested\"\"\"\n",
     "    \n",
     "    def __init__(self, \n",
     "                 origin, destination,\n",
@@ -121,23 +121,20 @@
     "        self.resource = simpy.Resource(env, capacity=nr_resources)\n",
     "\n",
     "    def execute_move(self, origin, destination):\n",
-    "        #print(\"Setting sail from %s to %s\" % (origin.geometry, destination.geometry))\n",
-    "\n",
+    "        \"\"\"determine distance between origin and destination, and\n",
+    "        yield the time it takes to travel it\"\"\"\n",
     "        origin = shapely.geometry.asShape(self.origin.geometry)\n",
     "        destination = shapely.geometry.asShape(self.destination.geometry)\n",
     "        distance = origin.distance(destination) \n",
     "\n",
     "        if self.container.level == self.container.capacity:\n",
-    "            self.log_entry('transport full start', self.env.now, self.container.level)\n",
     "            yield self.env.timeout(distance / self.v_full)\n",
     "            print('  sailing full: ' + str(self.v_full) + ' m/s')\n",
-    "            self.log_entry('transport full stop', self.env.now, self.container.level)\n",
-    "\n",
+    " \n",
     "        elif self.container.level == 0:\n",
-    "            self.log_entry('transport empty start', self.env.now, self.container.level)\n",
     "            yield self.env.timeout(distance / self.v_empty)\n",
     "            print('  sailing empty: ' + str(self.v_empty) + ' m/s')\n",
-    "            self.log_entry('transport empty stop', self.env.now, self.container.level)\n"
+    " "
    ]
   },
   {
@@ -149,10 +146,11 @@
     "class Process(object):\n",
     "    \"\"\"Process class\n",
     "    \n",
-    "    get_obj: simpy Container from which to extract (can be Site or Vessel)\n",
-    "    put_obj: simpy Container in which to insert (can be Site or Vessel)\n",
-    "    p_rate: rate with which quantity can be processed\n",
-    "    \"\"\"\n",
+    "    resource: a simpy resource that can be requested\n",
+    "    origin: object with simpy Container from which to get (can be Site or Vessel)\n",
+    "    destination: object with simpy Container in which to put (can be Site or Vessel)\n",
+    "    rate: rate with which quantity can be processed [amount/s]\n",
+    "    amount: amount to process\"\"\"\n",
     "\n",
     "    def __init__(self, \n",
     "                 nr_resources,\n",
@@ -167,18 +165,12 @@
     "        self.amount=amount\n",
     "        \n",
     "    def execute_process(self, origin, destination, amount):\n",
-    " #       print(origin.name)\n",
-    " #       print(origin.container.level)\n",
+    "        \"\"\"get amount from origin container,\n",
+    "        put amount in destination continater, and\n",
+    "        yield the time it takes to process it\"\"\"\n",
     "        origin.container.get(amount)\n",
-    " #       print(origin.container.level)\n",
-    "        \n",
-    " #       print(destination.name)\n",
-    " #       print(destination.container.level)\n",
     "        destination.container.put(amount)\n",
-    " #       print(destination.container.level)\n",
-    "\n",
     "        yield self.env.timeout(amount / self.rate)\n",
-    " #       print('T=' + '{:06.2f}'.format(self.env.now) + ' ' + destination.name + ' container value: ' + str(destination.container.level))\n",
     "        "
    ]
   },
@@ -277,8 +269,16 @@
    "source": [
     "class Installation(Identifiable):\n",
     "    \"\"\"The Installation Class forms a spefic class of activities with associated methods that can \n",
-    "    initiate and suspend processes according to a number of specified conditions. This class deals \n",
-    "    mainly with transport and installation of discrete objects.\"\"\"\n",
+    "    initiate and suspend processes according to a number of specified conditions. \n",
+    "    \n",
+    "    This class deals with transport and installation/placement of discrete and continuous objects.\n",
+    "    \n",
+    "    condition: expression that states when to initiate or to suspend activity\n",
+    "    origin: object with simpy Container from which to get (can be Site or Vessel)\n",
+    "    destination: object with simpy Container in which to put (can be Site or Vessel)\n",
+    "    loader: gets amount from origin Contaner and puts it into mover Container\n",
+    "    mover: moves amount in Container from origin to destination\n",
+    "    unloader: gets amount from mover Contaner and puts it into destination Container\"\"\"\n",
     "\n",
     "    def __init__(self, \n",
     "                 condition,\n",
@@ -321,7 +321,7 @@
     "            if not shown:\n",
     "                print('T=' + '{:06.2f}'.format(env.now) + ' ' + self.name + ' to ' + destination.name + ' suspended')\n",
     "                shown = True\n",
-    "            yield env.timeout(1) # step 1 minute ahead\n",
+    "            yield env.timeout(1) # step 1 time unit ahead\n",
     "\n",
     "        print('T=' + '{:06.2f}'.format(env.now) + ' ' + 'Condition: ' + condition + ' is satisfied')\n",
     "\n",
@@ -361,14 +361,20 @@
     "                print('Loading:')\n",
     "                yield from loader.execute_process(origin, mover, amount)\n",
     "                mover.log_entry('loading stop', self.env.now, mover.container.level)\n",
-    "\n",
+    " \n",
     "                loader.resource.release(my_load_resource_turn)\n",
     "\n",
+    "                print('  ' + origin.name + ' contains: ' + str(origin.container.level))\n",
+    "                print('  ' + mover.name + ' contains: ' + str(mover.container.level))\n",
+    "                print('  ' + destination.name + ' contains: ' + str(destination.container.level))\n",
+    " \n",
     "            # request access to the transport_resource\n",
     "            with mover.resource.request() as my_mover_turn:\n",
     "                yield my_mover_turn\n",
     "\n",
+    "                mover.log_entry('sailing full start', self.env.now, mover.container.level)\n",
     "                yield from mover.execute_move(origin, destination)\n",
+    "                mover.log_entry('sailing full stop', self.env.now, mover.container.level)\n",
     "\n",
     "            # request access to the placement_resource\n",
     "            with unloader.resource.request() as my_unloader_turn:\n",
@@ -381,11 +387,17 @@
     "\n",
     "                unloader.resource.release(my_unloader_turn)\n",
     "\n",
+    "                print('  ' + origin.name + ' contains: ' + str(origin.container.level))\n",
+    "                print('  ' + mover.name + ' contains: ' + str(mover.container.level))\n",
+    "                print('  ' + destination.name + ' contains: ' + str(destination.container.level))\n",
+    "\n",
     "            # request access to the transport_resource\n",
     "            with mover.resource.request() as my_mover_turn:\n",
     "                yield my_mover_turn\n",
     "\n",
+    "                mover.log_entry('sailing full start', self.env.now, mover.container.level)\n",
     "                yield from mover.execute_move(destination, origin)\n",
+    "                mover.log_entry('sailing full stop', self.env.now, mover.container.level)\n",
     "\n",
     "                mover.resource.release(my_mover_turn)\n"
    ]
