--- a/Example 20 - Objects example.ipynb
+++ b/Example 20 - Objects example.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 252,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 253,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 254,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 255,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 256,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 257,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 258,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 259,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 260,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -233,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 261,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -244,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 262,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -263,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 263,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -350,6 +350,7 @@
     "            destination.container.capacity - destination.container.level)\n",
     "\n",
     "        if amount>0:\n",
+    "            print('amount>0')\n",
     "            # request access to the load_resource\n",
     "            with loader.resource.request() as my_load_resource_turn:\n",
     "                yield my_load_resource_turn\n",
@@ -411,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 264,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -420,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 265,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -430,9 +431,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 266,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'container': <simpy.resources.container.Container object at 0x000002214CFAA208>, 'total_requested': 0, 'log': [], 't': [], 'value': [], 'geometry': {\"coordinates\": [52.94239823421129, 5.019298185633251], \"type\": \"Point\"}, 'env': <simpy.core.Environment object at 0x000002214CF81C88>, 'name': 'KP00', 'id': '2718059e-893f-11e8-8c90-60f677ba2ce0'}\n",
+      "{'container': <simpy.resources.container.Container object at 0x000002214CFAA438>, 'total_requested': 0, 'log': [], 't': [], 'value': [], 'geometry': {\"coordinates\": [52.93917167503315, 5.070195628786471], \"type\": \"Point\"}, 'env': <simpy.core.Environment object at 0x000002214CF81C88>, 'name': 'KP01', 'id': '2718059f-893f-11e8-b1fd-60f677ba2ce0'}\n",
+      "{'container': <simpy.resources.container.Container object at 0x000002214CFAADD8>, 'total_requested': 0, 'log': [], 't': [], 'value': [], 'geometry': {\"coordinates\": [53.0229621352376, 5.197016484858931], \"type\": \"Point\"}, 'env': <simpy.core.Environment object at 0x000002214CF81C88>, 'name': 'KP15', 'id': '271805a0-893f-11e8-a985-60f677ba2ce0'}\n",
+      "{'container': <simpy.resources.container.Container object at 0x000002214CFAA518>, 'total_requested': 0, 'log': [], 't': [], 'value': [], 'geometry': {\"coordinates\": [53.06330503232375, 5.310252030674185], \"type\": \"Point\"}, 'env': <simpy.core.Environment object at 0x000002214CF81C88>, 'name': 'KP32', 'id': '271805a1-893f-11e8-b5db-60f677ba2ce0'}\n"
+     ]
+    }
+   ],
    "source": [
     "# *** Define sites\n",
     "\n",
@@ -481,9 +493,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 267,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'resource': <simpy.resources.resource.Resource object at 0x000002214CFED470>, 'origin': <__main__.Site object at 0x000002214CFAAE48>, 'destination': <__main__.Site object at 0x000002214CFC2B00>, 'rate': 0.1, 'amount': 0, 'log': [], 't': [], 'value': [], 'geometry': {\"coordinates\": [52.94239823421129, 5.019298185633251], \"type\": \"Point\"}, 'env': <simpy.core.Environment object at 0x000002214CF81C88>, 'name': 'Gantry crane', 'id': '27204308-893f-11e8-9a2e-60f677ba2ce0'}\n",
+      "{'origin': <__main__.Site object at 0x000002214CFAAE48>, 'destination': <__main__.Site object at 0x000002214CFC2B00>, 'v_empty': 1.5, 'v_full': 1, 'resource': <simpy.resources.resource.Resource object at 0x000002214CFED390>, 'container': <simpy.resources.container.Container object at 0x000002214CFED7F0>, 'total_requested': 0, 'log': [], 't': [], 'value': [], 'geometry': {\"coordinates\": [52.93917167503315, 5.070195628786471], \"type\": \"Point\"}, 'env': <simpy.core.Environment object at 0x000002214CF81C88>, 'name': 'Transport barge 01', 'id': '2720430a-893f-11e8-bad2-60f677ba2ce0'}\n",
+      "{'origin': <__main__.Site object at 0x000002214CFAAE48>, 'destination': <__main__.Site object at 0x000002214CFC2B00>, 'v_empty': 1.5, 'v_full': 1, 'resource': <simpy.resources.resource.Resource object at 0x000002214CFED278>, 'container': <simpy.resources.container.Container object at 0x000002214CFED320>, 'total_requested': 0, 'log': [], 't': [], 'value': [], 'geometry': {\"coordinates\": [52.93917167503315, 5.070195628786471], \"type\": \"Point\"}, 'env': <simpy.core.Environment object at 0x000002214CF81C88>, 'name': 'Transport barge 02', 'id': '2720430b-893f-11e8-a8c3-60f677ba2ce0'}\n",
+      "{'resource': <simpy.resources.resource.Resource object at 0x000002214CFED7B8>, 'origin': <__main__.Site object at 0x000002214CFAAE48>, 'destination': <__main__.Site object at 0x000002214CFC2B00>, 'rate': 0.05, 'amount': 0, 'log': [], 't': [], 'value': [], 'geometry': {\"coordinates\": [53.0229621352376, 5.197016484858931], \"type\": \"Point\"}, 'env': <simpy.core.Environment object at 0x000002214CF81C88>, 'name': 'Installation crane', 'id': '27204309-893f-11e8-8842-60f677ba2ce0'}\n"
+     ]
+    }
+   ],
    "source": [
     "# *** Define fleet\n",
     "\n",
@@ -522,9 +545,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 268,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'env': <simpy.core.Environment object at 0x000002214CF81C88>, 'name': 'Block placement', 'id': '27254c1a-893f-11e8-8ad6-60f677ba2ce0', 'condition': 'site_01.container.level<5000', 'origin': <__main__.Site object at 0x000002214CFAAE48>, 'destination': <__main__.Site object at 0x000002214CFC2B00>, 'loader': <__main__.Processing_Resource object at 0x000002214CFED208>, 'mover': <__main__.Transport_Resource object at 0x000002214CFED128>, 'unloader': <__main__.Processing_Resource object at 0x000002214CFED198>, 'standing_by_proc': <Process(standing_by) object at 0x2214cfb83c8>, 'installation_proc': <Process(installation_process_control) object at 0x2214cfb8080>, 'installation_reactivate': <Event() object at 0x2214cfb8400>}\n",
+      "{'env': <simpy.core.Environment object at 0x000002214CF81C88>, 'name': 'Block placement', 'id': '27257324-893f-11e8-9bf8-60f677ba2ce0', 'condition': 'site_15.container.level<5000 and site_01.container.level>=3000', 'origin': <__main__.Site object at 0x000002214CFAAE48>, 'destination': <__main__.Site object at 0x000002214CFAA978>, 'loader': <__main__.Processing_Resource object at 0x000002214CFED208>, 'mover': <__main__.Transport_Resource object at 0x000002214CFED748>, 'unloader': <__main__.Processing_Resource object at 0x000002214CFED198>, 'standing_by_proc': <Process(standing_by) object at 0x2214cfb89b0>, 'installation_proc': <Process(installation_process_control) object at 0x2214cfb8470>, 'installation_reactivate': <Event() object at 0x2214cfb8d30>}\n"
+     ]
+    }
+   ],
    "source": [
     "# *** Define activties\n",
     "\n",
@@ -551,12 +583,347 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 269,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "T=000.00 Condition: site_01.container.level<5000 is satisfied\n",
+      "T=000.00 Block placement to KP01 started\n",
+      "amount>0\n",
+      "T=000.00 Block placement to KP15 suspended\n",
+      "Loading:\n",
+      "  KP00 contains: 14000\n",
+      "  Transport barge 01 contains: 1000\n",
+      "  KP01 contains: 0\n",
+      "  sailing full: 1 m/s\n",
+      "Unloading:\n",
+      "  KP00 contains: 14000\n",
+      "  Transport barge 01 contains: 0\n",
+      "  KP01 contains: 1000\n",
+      "  sailing empty: 1.5 m/s\n",
+      "amount>0\n",
+      "Loading:\n",
+      "  KP00 contains: 13000\n",
+      "  Transport barge 01 contains: 1000\n",
+      "  KP01 contains: 1000\n",
+      "  sailing full: 1 m/s\n",
+      "Unloading:\n",
+      "  KP00 contains: 13000\n",
+      "  Transport barge 01 contains: 0\n",
+      "  KP01 contains: 2000\n",
+      "  sailing empty: 1.5 m/s\n",
+      "amount>0\n",
+      "Loading:\n",
+      "  KP00 contains: 12000\n",
+      "  Transport barge 01 contains: 1000\n",
+      "  KP01 contains: 2000\n",
+      "  sailing full: 1 m/s\n",
+      "Unloading:\n",
+      "T=50001.00 Condition: site_15.container.level<5000 and site_01.container.level>=3000 is satisfied\n",
+      "T=50001.00 Block placement to KP15 started\n",
+      "amount>0\n",
+      "Loading:\n",
+      "  KP00 contains: 11000\n",
+      "  Transport barge 01 contains: 0\n",
+      "  KP01 contains: 3000\n",
+      "  sailing empty: 1.5 m/s\n",
+      "amount>0\n",
+      "  KP00 contains: 11000\n",
+      "  Transport barge 02 contains: 1000\n",
+      "  KP15 contains: 0\n",
+      "Loading:\n",
+      "  sailing full: 1 m/s\n",
+      "Unloading:\n",
+      "  KP00 contains: 10000\n",
+      "  Transport barge 01 contains: 1000\n",
+      "  KP01 contains: 3000\n",
+      "  KP00 contains: 10000\n",
+      "  Transport barge 02 contains: 0\n",
+      "  KP15 contains: 1000\n",
+      "  sailing full: 1 m/s\n",
+      "Unloading:\n",
+      "  sailing empty: 1.5 m/s\n",
+      "amount>0\n",
+      "Loading:\n",
+      "  KP00 contains: 9000\n",
+      "  Transport barge 01 contains: 0\n",
+      "  KP01 contains: 4000\n",
+      "  KP00 contains: 9000\n",
+      "  Transport barge 02 contains: 1000\n",
+      "  KP15 contains: 1000\n",
+      "  sailing empty: 1.5 m/s\n",
+      "amount>0\n",
+      "Loading:\n",
+      "  sailing full: 1 m/s\n",
+      "Unloading:\n",
+      "  KP00 contains: 8000\n",
+      "  Transport barge 01 contains: 1000\n",
+      "  KP01 contains: 4000\n",
+      "  KP00 contains: 8000\n",
+      "  Transport barge 02 contains: 0\n",
+      "  KP15 contains: 2000\n",
+      "  sailing full: 1 m/s\n",
+      "Unloading:\n",
+      "  sailing empty: 1.5 m/s\n",
+      "amount>0\n",
+      "Loading:\n",
+      "  KP00 contains: 7000\n",
+      "  Transport barge 01 contains: 0\n",
+      "  KP01 contains: 5000\n",
+      "  KP00 contains: 7000\n",
+      "  Transport barge 02 contains: 1000\n",
+      "  KP15 contains: 2000\n",
+      "  sailing empty: 1.5 m/s\n",
+      "  sailing full: 1 m/s\n",
+      "Unloading:\n",
+      "  KP00 contains: 7000\n",
+      "  Transport barge 02 contains: 0\n",
+      "  KP15 contains: 3000\n",
+      "  sailing empty: 1.5 m/s\n",
+      "amount>0\n",
+      "Loading:\n",
+      "  KP00 contains: 6000\n",
+      "  Transport barge 02 contains: 1000\n",
+      "  KP15 contains: 3000\n",
+      "  sailing full: 1 m/s\n",
+      "Unloading:\n",
+      "  KP00 contains: 6000\n",
+      "  Transport barge 02 contains: 0\n",
+      "  KP15 contains: 4000\n",
+      "  sailing empty: 1.5 m/s\n",
+      "amount>0\n",
+      "Loading:\n",
+      "  KP00 contains: 5000\n",
+      "  Transport barge 02 contains: 1000\n",
+      "  KP15 contains: 4000\n",
+      "  sailing full: 1 m/s\n",
+      "Unloading:\n",
+      "  KP00 contains: 5000\n",
+      "  Transport barge 02 contains: 0\n",
+      "  KP15 contains: 5000\n",
+      "  sailing empty: 1.5 m/s\n"
+     ]
+    }
+   ],
    "source": [
     "#*** Run the project\n",
     "env.run()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# sandbox"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 270,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# option to create a range of sites between two points\n",
+    "start = [52.93917167503315, 5.070195628786471] # Den Oever\n",
+    "stop = [53.0229621352376,  5.197016484858931]  # Breezanddijk\n",
+    "nums = 50"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 271,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lats = np.linspace(start[0], start[1], num=nums)\n",
+    "lons = np.linspace(stop[0],  stop[1],  num=nums)\n",
+    "\n",
+    "for i in range(nums):\n",
+    "    data_site = {\"env\": env,\n",
+    "                \"name\": \"KP\" + format(i,'02.0f'), \"geometry\": geojson.Point([lats[i], lons[i]]),\n",
+    "                \"capacity\": 5000, \"level\": 0}\n",
+    "    vars()['Site_' + \"KP\" + format(i,'02.0f')] = Site(**data_site)\n",
+    "    \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 272,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'container': <simpy.resources.container.Container at 0x2214cfc2438>,\n",
+       " 'env': <simpy.core.Environment at 0x2214cf81c88>,\n",
+       " 'geometry': {\"coordinates\": [52.93917167503315, 53.0229621352376], \"type\": \"Point\"},\n",
+       " 'id': '27afce18-893f-11e8-85b8-60f677ba2ce0',\n",
+       " 'log': [],\n",
+       " 'name': 'KP00',\n",
+       " 't': [],\n",
+       " 'total_requested': 0,\n",
+       " 'value': []}"
+      ]
+     },
+     "execution_count": 272,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Site_KP00.__dict__"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 273,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "51.96225379653832"
+      ]
+     },
+     "execution_count": 273,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lats[1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 274,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[5.07019563 5.07278381 5.07537199 5.07796017 5.08054835 5.08313653\n",
+      " 5.08572471 5.08831289 5.09090107 5.09348926 5.09607744 5.09866562\n",
+      " 5.1012538  5.10384198 5.10643016 5.10901834 5.11160652 5.1141947\n",
+      " 5.11678288 5.11937106 5.12195924 5.12454742 5.1271356  5.12972379\n",
+      " 5.13231197 5.13490015 5.13748833 5.14007651 5.14266469 5.14525287\n",
+      " 5.14784105 5.15042923 5.15301741 5.15560559 5.15819377 5.16078195\n",
+      " 5.16337014 5.16595832 5.1685465  5.17113468 5.17372286 5.17631104\n",
+      " 5.17889922 5.1814874  5.18407558 5.18666376 5.18925194 5.19184012\n",
+      " 5.1944283  5.19701648]\n",
+      "[52.93917168 52.94088168 52.94259169 52.9443017  52.94601171 52.94772172\n",
+      " 52.94943173 52.95114174 52.95285175 52.95456176 52.95627177 52.95798178\n",
+      " 52.95969179 52.9614018  52.96311181 52.96482182 52.96653183 52.96824183\n",
+      " 52.96995184 52.97166185 52.97337186 52.97508187 52.97679188 52.97850189\n",
+      " 52.9802119  52.98192191 52.98363192 52.98534193 52.98705194 52.98876195\n",
+      " 52.99047196 52.99218197 52.99389198 52.99560198 52.99731199 52.999022\n",
+      " 53.00073201 53.00244202 53.00415203 53.00586204 53.00757205 53.00928206\n",
+      " 53.01099207 53.01270208 53.01441209 53.0161221  53.01783211 53.01954212\n",
+      " 53.02125213 53.02296214]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "print(np.linspace(5.070195628786471, 5.197016484858931, num=50))\n",
+    "print(np.linspace(52.93917167503315, 53.0229621352376, num=50))\n",
+    "\n",
+    "# Den Oever\n",
+    "# <longitude>5.070195628786471</longitude>\n",
+    "# <latitude>52.93917167503315</latitude>\n",
+    "\n",
+    "# Breezanddijk\n",
+    "# <longitude>5.197016484858931</longitude>\n",
+    "# <latitude>53.0229621352376</latitude>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 275,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n",
+      "10\n",
+      "11\n",
+      "12\n",
+      "13\n",
+      "14\n",
+      "15\n",
+      "16\n",
+      "17\n",
+      "18\n",
+      "19\n",
+      "20\n",
+      "21\n",
+      "22\n",
+      "23\n",
+      "24\n",
+      "25\n",
+      "26\n",
+      "27\n",
+      "28\n",
+      "29\n",
+      "30\n",
+      "31\n",
+      "32\n",
+      "33\n",
+      "34\n",
+      "35\n",
+      "36\n",
+      "37\n",
+      "38\n",
+      "39\n",
+      "40\n",
+      "41\n",
+      "42\n",
+      "43\n",
+      "44\n",
+      "45\n",
+      "46\n",
+      "47\n",
+      "48\n",
+      "49\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(50):\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 276,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Den Oever\n",
+    "# <longitude>5.070195628786471</longitude>\n",
+    "# <latitude>52.93917167503315</latitude>\n",
+    "\n",
+    "# Breezanddijk\n",
+    "# <longitude>5.197016484858931</longitude>\n",
+    "# <latitude>53.0229621352376</latitude>"
    ]
   }
  ],
